<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoActivity</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="question_text">PlaceHolder</string>
    <string name="next">Next</string>
     <string name="prev">Prev</string>
    
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    
    <string name="Correct">Correct</string>
    <string name="Wrong">Wrong</string>
    
    <string name="Cheat">Cheat</string>
    
    <string name="cheat_warn">Are you sure you want to cheat</string>
    <string name="Bar">Cheaters are barred</string>
     
</resources>
